kopy-compiler/test-data/diagnostics/non-data-class/simple-1.kt
// !LANGUAGE: +ContextReceivers
// !DIAGNOSTICS: -UNUSED_PARAMETER -UNUSED_VARIABLE -MISSING_DEPENDENCY_CLASS -MISSING_DEPENDENCY_SUPERCLASS

package com.javiersc.kotlin.kopy.playground

import com.javiersc.kotlin.kopy.Kopy

<!NON_DATA_CLASS_KOPY_ANNOTATED!>@Kopy<!> class Foo(val value: String)
